--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+   
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="String Convertor"
+      content="This website performs several operations on a string."
     />
     <title>String Convertor</title>
   </head>
